<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/recuperarPerfil_tvTitle"
        android:id="@+id/tvTitle"
        android:textStyle="bold"
        android:padding="20dp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/recuperarPerfil_tvDescricao"
        android:id="@+id/tvDescricao"
        android:textStyle="bold"
        android:padding="20dp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:gravity="center" />

    <EditText
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:id="@+id/etId"
        android:inputType="number"
        android:hint="@string/recuperarPerfil_etId_hint"
        android:maxLength="5"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
