<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/criarPerfil_tvBoasVindas"
                android:id="@+id/tvBoasVindas"
                android:textStyle="bold"
                android:padding="20dp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ivBoasVindas"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/boas_vindas" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/criarPerfil_tvNovoUsuario"
                android:id="@+id/tvNovoUsuario"
                android:textStyle="bold"
                android:padding="20dp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:gravity="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etNome"
                android:inputType="textPersonName"
                android:hint="@string/criarPerfil_etNome_hint"
                android:maxLength="50"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etApelido"
                android:hint="@string/criarPerfil_etApelido_hint"
                android:maxLength="15"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPossuiPerfil"
                android:layout_gravity="center_horizontal"
                android:text="@string/criarPerfil_tvPossuiPerfil"
                android:layout_marginTop="50dp"
                android:textColor="#006052"
                android:singleLine="false"
                android:textAlignment="center"
                android:gravity="center" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
